Small Code Improvments